--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@headlessui/react": "^1.7.17",
+    "@heroicons/react": "^2.0.18",
     "@sanity/client": "^6.4.12",
     "@sanity/image-url": "^1.0.2",
     "@testing-library/jest-dom": "^5.17.0",
